2.7.1
 - setup: bump dclab from 0.34.3 to 0.35.0
 - tests: change test data to avoid warnings in dclab 0.35.0
2.7.0
 - feat: accept DCOR drag events from DCOR-Aid data browser
2.6.9
 - fix: don't reset color and name of dataset during duplicate
   matrix action (#96)
2.6.8
 - fix: adapt color scheme to work in dark mode (#92)
2.6.7
 - fix: correctly handle missing features on data export (#80)
 - ref: cleanup (default arguments and PyQt5 object references)
 - setup: bump dclab from 0.34.2 to 0.34.3 (set R_HOME)
 - build: bump rpy2 from 3.4.2 to 3.4.5
 - build: bump pyqtgraph from 0.12.1 to 0.12.2 and remove
   colorbar export workarounds
2.6.6
 - fix: false alarms about wrong pyqtgraph version on startup
   (removed the responsible code, because there are now more regular
   releases of pyqtgraph)
 - enh: allow passing session files, datasets, and filters via the
   command line (#88)
 - enh: associate the .so2 file format with Shape-Out on Windows (#88)
 - build: migrate to Inno Setup 6
 - ref: avoid pyqtgraph DeprecationWarning due to `translate`
2.6.5
 - fix: migrate to pg.ColorBarItem (with some manual patches from
   upstream) to resolve issues with SVG export (#87)
 - fix: units of viscosity is mPa*s (#91)
 - setup: bump pyqtgraph from 0.12.0 to 0.12.1
 - setup: bump dclab from 0.33.3 to 0.34.2
 - ci: fix build issues for macOS
2.6.4
 - fix: HTML-escape plot titles and axis labels (#82)
2.6.3
 - build: pin rpy2 to 3.4.2 on Windows (#84)
2.6.2
 - setup: migrate to pyqtgraph 0.12.0
 - setup: bump dclab from 0.33.1 to 0.33.3
 - docs: fix rtd build
2.6.1
 - setup: remove deprecated setup.py test
 - setup: bump dclab to 0.33.1 (filters were ignored when exporting
   trace data to hdf5,
   see https://github.com/ZELLMECHANIK-DRESDEN/DCKit/issues/17)
2.6.0
 - feat: add background correction in quickview (#54)
 - fix: workaround for different plot widths due to title label (#33)
2.5.2
 - build: add pyinstaller hook for pyqtgraph
2.5.1